--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
+    "lol1": "^1.0.0",
     "mini-css-extract-plugin": "^2.2.0",
     "sass": "^1.38.2",
     "sass-loader": "^12.1.0",
